<resources>
    <string name="app_name">Battery Alarm</string>
    <string name="base_api_url">http://private-e8a06-feprofile.apiary-mock.com</string>
    <string name="retry">Retry</string>
    <string name="unknown_error">unknown error</string>
    <string name="show_default">Default</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- Battery Status Strings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="BATTERY_STATUS_CHARGING">Charging</string>
    <string name="BATTERY_STATUS_DISCHARGING">Discharging</string>
    <string name="BATTERY_STATUS_FULL">Full</string>
    <string name="BATTERY_STATUS_UNKNOWN">Unknown</string>
    <string name="BATTERY_STATUS_NOT_CHARGING">Not Charging</string>

    <!-- Battery Plug Type Strings -->
    <string name="BATTERY_PLUGGED_WIRELESS">Wireless Charger</string>
    <string name="BATTERY_PLUGGED_USB">USB</string>
    <string name="BATTERY_PLUGGED_AC">Power Adapter</string>

    <!-- Battery Health Status Strings -->
    <string name="BATTERY_HEALTH_COLD">Cold</string>
    <string name="BATTERY_HEALTH_DEAD">Dead</string>
    <string name="BATTERY_HEALTH_GOOD">Good</string>
    <string name="BATTERY_HEALTH_OVER_VOLTAGE">Over Voltage</string>
    <string name="BATTERY_HEALTH_OVERHEAT">Over Heat</string>
    <string name="BATTERY_HEALTH_UNSPECIFIED_FAILURE">Unspecified Failure</string>
    <string name="BATTERY_HEALTH_UNKNOWN">Unknown</string>

    <!-- NOTIFICATION CHANNELS  -->
    <string name="noti_channel_battery_level">Battery Level Notification</string>
    <string name="noti_channel_low_battery">Low Battery Notification</string>
    <string name="noti_channel_high_battery">High Battery Notification</string>
    <string name="BATTERY_LEVEL_HIGH_CHANNEL_DESCRIPTION">This Notification notifies the user when the device battery level is equal or greater than the high battery level set by the User in the App.</string>
    <string name="BATTERY_LEVEL_CHANNEL_DESCRIPTION">This Notification notifies user when the battery level of the device changes</string>
    <string name="BATTERY_LEVEL_LOW_CHANNEL_DESCRIPTION">This notification notifies use when the battery level of the device is below the low battery level set by the user in the app</string>
    <string name="BATTERY_TEMPERATURE_LOW_CHANNEL_DESCRIPTION">This notification notifies use when the battery temperature of the device is equal or greater than the battery high temperature set by the user in the app</string>


    <string name="description_battery_monitoring_service">This service updates the battery Level shown in the notification</string>
    <string name="default_notification_body">Fetching Battery Information</string>

    <string name="battery_full_notification_title">Battery Full Alarm</string>
    <string name="battery_full_notification_body">Battery Full Alarm was set at Battery Level</string>

    <string name="battery_low_notification_title">Battery Low warning</string>
    <string name="battery_low_notification_body">Battery Low warning was set at Battery Level</string>

    <string name="battery_high_temperature_notification_title">Battery Overheat warning</string>
    <string name="battery_high_temperature_notification_body">Battery Overheat warning was set at Battery Temp</string>


    <string name="show_total_capacity_label">Battery Capacity:</string>
    <string name="show_remaining_capacity_label">Remaining Capacity:</string>


    <string name="show_capacity_unit">mAh</string>
    <string name="show_settings">Settings</string>
    <string name="show_start">start</string>
    <string name="show_stop">stop</string>
    <string name="toast_alarm_start">Full battery alarm is ON</string>
    <string name="toast_alarm_stop">Full battery alarm is OFF</string>
    <string name="show_temperature">Temperature</string>
    <string name="show_voltage">Voltage</string>
    <string name="show_battery_health">Battery Health</string>
    <string name="show_degree"> \u2103</string>
    <string name="show_percent">\u0025</string>


    <!--rington picker-->
    <string name="ringtone_picker_default_title">Select ringtone</string>
    <string name="title_default_list_item">Default</string>
    <string name="title_silent_list_item">Silent</string>
    <string name="show_battery_level">Battery Level</string>
    <string name="show_plugged">Plugged</string>
    <string name="show_charging_status">Charging Status</string>
    <string name="show_technology">Technology</string>
    <string name="show_mAH">mAH</string>
    <string name="menu_item_how_to_use">How to use</string>
    <string name="show_full_battery_alarm">Full Battery Alarm</string>
    <string name="alphabet_A_dot">A.</string>
    <string name="show_fba_instruction_a">Once the application is installed, full battery alarm is activated.</string>
    <string name="show_fba_instruction_b">While charging, once the battery is fully charged at 100%, the app will sound an alarm which can be stopped by either clicking the dismiss alarm button or by unplugging the charger.</string>
    <string name="show_how_to_use">How To Use</string>
    <string name="cd_battery_charging_icon">Battery Charging Icon</string>
    <string name="cd_battery_temperature_icon">Battery Temperature Icon</string>
    <string name="cd_battery_health_icon">Battery Health Icon</string>
    <string name="cd_alarm_start_stop_icon">Alarm Start/Stop Icon</string>
    <string name="cd_application_settings_icon">Application Settings Icon</string>


    <!--Settings Screen Labels -->
    <string name="pref_category_battery_threshold_label">Battery Threshold Levels Settings</string>
    <string name="pref_category_silent_mode_label">Silent Mode Settings</string>
    <string name="pref_category_alarm_volume_setting_label">Alarm Volume Settings</string>
    <string name="pref_category_alarm_tone_setting_label">Alarm Tone Settings</string>


    <string name="label_battery_high_level">Full Battery Alarm Level</string>
    <string name="summary_battery_high_level">Alert at selected battery level</string>

    <string name="label_battery_low_level">Low Battery Warning Level</string>
    <string name="summary_battery_low_level">Warning at selected battery level</string>

    <string name="label_battery_high_temperature">Battery Temperature Warning Level</string>
    <string name="summary_battery_high_temperature">Warning at selected battery temperature </string>

    <string name="label_alarm_volume">Alarm Volume Settings</string>
    <string name="summary_alarm_volume">Currently Selected Alarm Volume </string>

    <string name="label_alarm_tone">Alarm Ringtone</string>
    <string name="summary_alarm_tone">Select Alarm Ringtone </string>


    <string name="label_activate_vibration_mode">Activate Vibration Mode</string>
    <string name="label_activate_sound_mode">Activate Sound Mode</string>
    <string name="label_ring_on_silent_mode">Ring Alarm in silent Mode</string>
    <string name="label_vibrate_on_silent_mode">Vibrate in silent Mode</string>


    <!--Drawer Items -->
    <string name="show_battery_detail">Battery Detail</string>
    <string name="show_battery_alarm">Battery Alarm</string>
    <string name="show_drawer_header_title">Battery Alarm</string>
    <string name="show_share">Share</string>
    <string name="show_contact_us">Contact Us</string>
    <string name="show_communicate">Communicate</string>
    <string name="show_company_name">ChargingWatts</string>

    <!--Alarm Screen Msgs -->
    <string name="show_full_battery_alarm_msg">Full Battery Alarm is Ringing</string>
    <string name="show_low_battery_alarm_msg">Low Battery Alarm is Ringing</string>
    <string name="show_high_temp_battery_alarm_msg">High Temp Battery Alarm is Ringing</string>



    <string name="show_stop_alarm_msg">Remove charger to stop Alarm! \n Or \n Press Here!</string>

    <string name="playstore_base_url">https://play.google.com/store/apps/details?id=</string>


</resources>
