<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_battery_graph"
    app:startDestination="@id/battery_level_fragment">

    <fragment
        android:id="@+id/battery_level_fragment"
        android:name="com.chargingwatts.chargingalarm.ui.batteryprofile.BatteryProfileFragment"
        android:label="@string/show_battery_alarm"
        tools:layout="@layout/fragment_battery_profile" >
        <action
            android:id="@+id/action_battery_level_fragment_to_battery_detail_fragment"
            app:destination="@id/battery_detail_fragment" />
        <action
            android:id="@+id/action_battery_level_fragment_to_howToUseActivity"
            app:destination="@id/how_to_use_activity" />
    </fragment>
    <fragment
        android:id="@+id/battery_detail_fragment"
        android:name="com.chargingwatts.chargingalarm.ui.batterydetail.BatteryDetailFragment"
        android:label="@string/show_battery_detail"
        tools:layout="@layout/fragment_battery_detail" />
    <fragment
        android:id="@+id/settings_fragment"
        android:name="com.chargingwatts.chargingalarm.ui.settings.SettingsFragment"
        android:label="@string/show_settings"
         />
    <activity
        android:id="@+id/how_to_use_activity"
        android:name="com.chargingwatts.chargingalarm.HowToUseActivity"
        android:label="HowToUseActivity" />
</navigation>