<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/color_white">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical"
            android:padding="@dimen/dimen_18dp"
            android:paddingLeft="@dimen/dimen_24dp"
            android:paddingRight="@dimen/dimen_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout android:gravity="center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:weightSum="1.0">
                <LinearLayout android:gravity="center_vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.2">
                    <TextView android:textSize="@dimen/text_size_20"
                        android:textColor="#ff000000"
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/show_how_to_use" />
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8">
                    <ImageView android:id="@+id/iv_cancel"
                        android:layout_width="@dimen/dimen_32dp"
                        android:layout_height="@dimen/dimen_32dp"
                        android:src="@drawable/ic_clear_red_24dp"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--<TextView android:textSize="18.0dip" android:textColor="@color/colorPrimary" android:gravity="center" android:id="@id/TxtTheftAlam" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="Theft Alarm" />-->
                <!--<View android:background="@color/colorPrimary" android:layout_width="fill_parent" android:layout_height="0.5px" />-->
                <!--<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">-->
                <!--<TextView android:textSize="16.0dip" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="A. " />-->
                <!--<TextView android:textColor="#ff000000" android:id="@id/theft_A" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="To use theft alarm, connect the mobile charger and click on ‘Theft Alarm’." />-->
                <!--</LinearLayout>-->
                <!--<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">-->
                <!--<TextView android:textSize="16.0dip" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="B. " />-->
                <!--<TextView android:textColor="#ff000000" android:id="@id/theft_B" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="You will then be asked to enter a password. This is a one-time activity." />-->
                <!--</LinearLayout>-->
                <!--<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">-->
                <!--<TextView android:textSize="16.0dip" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="C. " />-->
                <!--<TextView android:textColor="#ff000000" android:id="@id/theft_C" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="After successfully configuring the password, the theft alarm will be activated." />-->
                <!--</LinearLayout>-->
                <!--<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">-->
                <!--<TextView android:textSize="16.0dip" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="D. " />-->
                <!--<TextView android:textColor="#ff000000" android:id="@id/theft_D" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="Now if the phone is unplugged, an alarm will sound and will only stop by inserting the correct password." />-->
                <!--</LinearLayout>-->
                <TextView
                    android:textSize="@dimen/text_size_18"
                    android:textColor="#E54548"
                    android:gravity="center"
                    android:id="@+id/tv_full_battery_alarm"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_32dp"
                    android:layout_marginTop="@dimen/dimen_12dp"
                    android:text="@string/show_full_battery_alarm" />
                <View android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_point_5_dp"
                    />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5dp">
                    <TextView
                        android:textSize="@dimen/text_size_18"
                        android:textColor="#ff000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alphabet_A_dot" />
                    <TextView android:textColor="#ff000000"
                        android:id="@+id/tv_fba_instruction_a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show_fba_instruction_a"
                        android:textSize="@dimen/text_size_16"/>
                </LinearLayout>
                <LinearLayout android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5dp">
                    <TextView
                        android:textSize="@dimen/text_size_18"
                        android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="B. " />
                    <TextView android:textColor="#ff000000"
                        android:id="@+id/tv_fba_instruction_b"
                        android:paddingBottom="@dimen/dimen_5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show_fba_instruction_b"
                        android:textSize="@dimen/text_size_16"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>